--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -5,15 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3      
       - name: Build backend docker image
         run: |
           yarn
           yarn build:backend
           yarn build-image
+      - name: Start Backend Docker Container
+        run: docker run -p 7007:7007 your-backend-image:latest
       - name: Buld frontend
-        run: yarn install --frozen-lockfile
-      - name: Start frontend
-        run: yarn start
+        run: yarn install --frozen-lockfile      
       - name: Run e2e
         run: yarn test:e2e 
