--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -10,6 +10,9 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Start backend
+        run: yarn start-backend
+
       - name: Buld backstage
         run: yarn build:all
 
