--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -6,6 +6,10 @@ jobs:
     steps:
       - name: Download project
         uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.18.2
 
       - name: Install dependencies
         run: yarn install
