--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -14,6 +14,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
+      - name: Start backend
+        run: yarn start-backend
+
       - name: Buld backstage
         run: yarn build:all
 
