--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -3,6 +3,15 @@ on: push
 jobs:
   e2e:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:latest
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_DB: vm
+          POSTGRES_USER: vm
+          POSTGRES_PASSWORD: secret
     steps:
       - name: Download project
         uses: actions/checkout@v3
@@ -12,7 +21,14 @@ jobs:
           node-version: 18.18.2
 
       - name: Install dependencies
-        run: yarn install
+        run: | 
+          yarn install
+          yarn add --cwd packages/backend pg
+
+      - name: Start PostgreSQL
+        run: |
+          # Wait for PostgreSQL to be ready before starting the backend
+          sleep 10
 
       - name: Start backend
         run: yarn start-backend
