--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Start backend
         run: | 
-          yarn dev &
+          yarn build:backend
           sleep 30  # Wait for the backend to start
           nc -zv localhost 7007
           nc -zv localhost 3000
