--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -25,15 +25,14 @@ jobs:
           yarn install
           yarn add --cwd packages/backend pg
 
-      - name: Test PostgreSQL
-        run: |
-          sudo -u postgres psql -c "ALTER USER postgres PASSWORD 'secret';"
-          sudo -u postgres psql -c "CREATE DATABASE vm;"
-
       - name: Start PostgreSQL
         run: |
           # Wait for PostgreSQL to be ready before starting the backend
           sleep 10
+
+      - name: Check PostgreSQL Connection
+        run: |
+          psql -h localhost -U vm -d vm -c "SELECT 1;"    
 
       - name: Start backend
         run: | 
