--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Check PostgreSQL Connection
         run: |
-          psql -h localhost -U vm -d vm -c "SELECT 1;"    
+          PGPASSWORD=secret psql -h localhost -U vm -d vm -c "SELECT 1;"    
 
       - name: Start backend
         run: | 
