--- a/app-config.yaml
+++ b/app-config.yaml
@@ -28,12 +28,9 @@ backend:
   # This is for local development only, it is not recommended to use this in production
   # The production database configuration is stored in app-config.production.yaml
   database:
-    client: pg
+    client: sqlite3
     connection:
-      host: 127.0.0.1
-      port: 5432
-      user: vm
-      password: secret
+      filename: ./mydb.sqlite3
     
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
