--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Create SQLite database
         run: |
+            mkdir sqlite-database            
             echo "CREATE TABLE example (id INTEGER PRIMARY KEY, name TEXT);" > example.sql
             sqlite3 ./sqlite-database/mydb.db < example.sql
 
